name:                haskell-api-helpers-ghcjs
version:             0.1.0.1
synopsis:            Some API helpers I need - specific to ghcjs
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-api-helpers-ghcjs#readme
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskell.Api.Helpers.GHCJS
  build-depends:       base
                     , aeson
                     , bytestring
                     , data-default
                     , ghcjs-ajax == 0.2.0.0
                     , http-types
                     , mtl
                     , string-conversions
                     , text
                     , transformers
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite haskell-api-helpers-ghcjs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-api-helpers-ghcjs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-api-helpers-ghcjs
